--- a/coip/templates/coip/base.html
+++ b/coip/templates/coip/base.html
@@ -9,7 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans&display=swap&subset=korean');
+        @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@2.0/nanumsquare.css);
+        body {
+            font-family: 'NanumSquare', sans-serif;
+        }
     </style>
 </head>
 <body>
@@ -17,8 +20,8 @@
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <img class="bi me-2" width="40" height="32" src="{% static 'img/airplane-emoji-clipart-md.png' %}" alt="로고"></img>
-                <span class="fs-4">  <strong>AI 공항 안전 솔루션</strong></span>
+                <img class="bi me-2" width="40" height="40" src="{% static 'img/airplane-logo.png' %}" alt="로고"></img>
+                <span class="fs-4"><strong>AI 공항 안전 솔루션</strong></span>
             </a>
 
             <ul class="nav nav-pills">
@@ -36,7 +39,7 @@
 
     <div class="footer bg-dark text-white py-4">
         <div class="container">
-            <h5 class="mb-2">항공 관제을 책임지는 AI 공항 안전 솔루션</h5>
+            <h5 class="mb-2">항공 관제를 책임지는 AI 공항 안전 솔루션</h5>
             <h6 class="mb-2">Copyright 2023. 대박징조 all rights reserved.</h6>
             <h6>미래내일 청년일경험 프로젝트</h6>
         </div>
