--- a/coip/templates/coip/result_video.html
+++ b/coip/templates/coip/result_video.html
@@ -1,16 +1,31 @@
 {% extends 'coip/base.html' %}
-
 {% block content %}
-  <div class="container">
-      <h2>변환 데이터</h2>
-      
-      <div class="processed-data">
-          <!-- 이미지를 표시하기 위한 img 태그 추가 -->
-          <img src="{{ processed_data.url }}" alt="Processed Data" class="img-fluid">
-      </div>
-      
-      <div class="back-btn">
-          <a href="{% url 'upload_video' %}" class="btn btn-primary">Upload Another Video</a>
-      </div>
-  </div>
+<header>
+    <style>
+        .card {
+            width: 5000px;
+            max-width: 100%;
+        }
+        
+        .img-fluid {
+            display: block;
+            margin: auto;
+        }
+    </style>
+</header>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6 mx-auto">
+            <h2 class="mb-4">변환 데이터</h2>
+            <div class="card mb-4">
+                <div class="card-body">
+                    <img src="{{ processed_data_url }}" alt="Processed Data" class="img-fluid">
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a href="{% url 'upload_video' %}" class="btn btn-primary">다시 업로드</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
