--- a/coip/templates/coip/team.html
+++ b/coip/templates/coip/team.html
@@ -10,8 +10,14 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">이상준</h5>
-                    <p class="card-text">KT AIVLE School 3기 DX 컨설턴트</p>
-                    <p class="card-text">기획, 데이터분석 담당</p>
+                    <p class="card-text">KT AIVLE School 3기 DX컨설턴트</p>
+                    <p class="card-text"></p>
+                    <h5 class="card-title">PART</h5>
+                    Team Leader
+                    <br>
+                    기획
+                    <br>
+                    데이터분석
                 </div>
             </div>
         </div>
@@ -20,8 +26,15 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">원유준</h5>
-                    <p class="card-text">KT AIVLE School 3기 AI 개발자</p>
-                    <p class="card-text">데이터분석, AI 담당</p>
+                    <p class="card-text">KT AIVLE School 3기 AI개발자</p>
+                    <p class="card-text"></p>
+                    <h5 class="card-title">PART</h5>
+                    기획
+                    <br>
+                    데이터분석/수집
+                    <br>
+                    AI
+                    <br>
                 </div>
             </div>
         </div>
@@ -30,8 +43,15 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">나건우</h5>
-                    <p class="card-text">KT AIVLE School 3기 AI 개발자</p>
-                    <p class="card-text">Front-end, Back-end 담당</p>
+                    <p class="card-text">KT AIVLE School 3기 AI개발자</p>
+                    <p class="card-text"></p>
+                    <h5 class="card-title">PART</h5>
+                    Front-end
+                    <br>
+                    Back-end
+                    <br>
+                    AI
+                    <br>
                 </div>
             </div>
         </div>
